# job-scheduler

./: .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  README.md
backend/: .env.example  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 3499ddaccae7_initial_migration.py
deploy/: nginx.conf  start_api.sh  start_worker.sh
deploy/systemd/: api.service  worker.service
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: main.tsx
frontend/src/app/: App.tsx
frontend/src/app/components/: CreateJobModal.tsx  DlqView.tsx  JobDetailModal.tsx  JobsTable.tsx  LogsPanel.tsx  Sidebar.tsx  StatsGrid.tsx  WorkerFleet.tsx
frontend/src/app/lib/: api.ts  format.ts  hooks.ts  services.ts  types.ts  websocket.tsx
frontend/src/app/pages/: Dashboard.tsx  Layout.tsx
frontend/src/sdk/: sdk.gen.ts  types.gen.ts
frontend/src/styles/: fonts.css  index.css  tailwind.css  theme.css
scripts/: seed_jobs.py
